Fix alignment

--- a/style.css
+++ b/style.css
@@ -1263,7 +1263,7 @@ a.more-link {
     font-weight: 400;
     padding: 30px 0 0;
     text-align: center;
-    /*width: 53%;*/
+    width: 53%;
 }
 
 .home-video .content em {
